--- a/task1/pom.xml
+++ b/task1/pom.xml
@@ -26,5 +26,12 @@
 	  <artifactId>refdiff-core</artifactId>
 	  <version>0.1.1</version>
 	</dependency>
+	<!-- <dependency>
+      <groupId>org.eclipse.jgit</groupId>
+      <artifactId>org.eclipse.jgit</artifactId>
+      <version>5.1.3.201810200350-r</version>
+    </dependency> -->
   </dependencies>
+  
+
 </project>
